<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetInfo Widget</string>
    <string name="widget_name">NetInfo</string>

    <!-- Widget info -->
    <string name="mobile_data">Mobile data</string>
    <string name="wifi">Wi-Fi</string>

    <string name="tap_to_change">tap to change</string>
    <string name="turning_on">turning on…</string>
    <string name="turning_off">turning off…</string>

    <string name="not_available">N/A</string>
    <string name="no_service">no service</string>
    <string name="not_connected">not connected</string>
    <string name="airplane_mode">airplane mode</string>
    <string name="error_mobile_data_on_flight_mode">Unable to turn Mobile data on while Flight mode is enabled.</string>
    <string name="roaming">roaming</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="data_usage_na">data usage n/a</string>

    <string name="security">"Security: "</string>
    <string name="no_network">no network</string>
    <string name="connecting">connecting…</string>
    <string name="disconnecting">disconnecting…</string>
    <string name="scanning">scanning…</string>

    <!-- Widget configuration -->
    <string name="lockscreen_configuration">Lock Screen Configuration</string>
    <string name="homescreen_configuration">Home Screen Configuration</string>

    <string name="mobile_data_2_1">Mobile data (2 x 1)</string>
    <string name="wifi_2_1">Wi-Fi (2 x 1)</string>
    <string name="mobile_and_wifi_2_2">Mobile data &amp; Wi-Fi (2 x 2)</string>

    <string name="mobile_data_settings_shortcut">Mobile data settings shortcut</string>
    <string name="mobile_network_settings">Mobile network settings</string>
    <string name="data_usage">Data usage</string>
    <string name="tethering_and_portable_hotspot">Tethering &amp; portable hotspot</string>

    <string name="center_vertically">Center vertically</string>
    <string name="bg_transparency">Background transparency</string>
    <string name="zero" translatable="false">0</string>
    <string name="fifty" translatable="false">50</string>
    <string name="one_hundred" translatable="false">100</string>

    <!--
    START: android-5.1.1_r33
    https://android.googlesource.com/platform/packages/apps/Settings/+/android-5.1.1_r33/res/values/strings.xml
    -->

    <!-- Wifi 2.4GHz is used as an universal itendifier for 2.4GHz band -->
    <string name="wifi_band_24ghz" translatable="false">2.4 GHz</string>
    <!-- Wifi Internal 5GHz as an universal itendifier for 5GHz band -->
    <string name="wifi_band_5ghz" translatable="false">5 GHz</string>

    <!--
    END: android-5.1.1_r33
    -->

    <!--
    START: android-4.4.4_r2.0.1
    https://android.googlesource.com/platform/packages/apps/Settings/+/android-4.4.4_r2.0.1/res/values/strings.xml
    -->

    <!-- Used in Wi-Fi settings dialogs when Wi-Fi does not have any security. -->
    <string name="wifi_security_none">open</string>
    <!-- Do not translate.  Terminology for wifi with WEP security -->
    <string name="wifi_security_wep" translatable="false">WEP</string>
    <!-- Do not translate.  Terminology for wifi with WPA security -->
    <string name="wifi_security_wpa" translatable="false">WPA PSK</string>
    <!-- Do not translate.  Terminology for wifi with WPA2 security -->
    <string name="wifi_security_wpa2" translatable="false">WPA2 PSK</string>
    <!-- Do not translate.  Terminology for wifi with both WPA/WPA2 security, or unknown -->
    <string name="wifi_security_wpa_wpa2" translatable="false">WPA/WPA2 PSK</string>
    <!-- Do not translate.  Terminology for wifi with unknown PSK type -->
    <string name="wifi_security_psk_generic" translatable="false">@string/wifi_security_wpa_wpa2</string>
    <!-- Do not translate.  Concise terminology for wifi with 802.1x EAP security -->
    <string name="wifi_security_eap" translatable="false">802.1x EAP</string>

    <!--
    END: android-4.4.4_r2.0.1
    -->

</resources>
