<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ultrafunk.network_info.config.ConfigActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/okCancelRelativeLayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp" >

            <LinearLayout
                android:id="@+id/showWidgetLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/configurationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:ellipsize="end" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <RadioGroup
                    android:id="@+id/showWidgetRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/showMobileRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/mobile_data_2_1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_radio_material"
                        android:background="?android:selectableItemBackground"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_gray" />

                    <RadioButton
                        android:id="@+id/showWifiRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/wifi_2_1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_radio_material"
                        android:background="?android:selectableItemBackground"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/light_gray" />

                    <RadioButton
                        android:id="@+id/showBothRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/mobile_and_wifi_2_2"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_radio_material"
                        android:background="?android:selectableItemBackground"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />

                </RadioGroup>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/mobileSettingsScreenRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/mobileSettingsScreenLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:clickable="true"
                    android:background="?android:selectableItemBackground" >

                    <TextView
                        android:id="@+id/mobileSettingsScreenTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:paddingBottom="3dp"
                        android:text="@string/mobile_data_settings_shortcut"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:singleLine="true"
                        android:ellipsize="end" />

                    <TextView
                        android:id="@+id/mobileCurrentSettingsScreenTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="14dp"
                        android:text="@string/mobile_network_settings"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lockscreenRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <CheckedTextView
                    android:id="@+id/gravityCheckedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:checked="true"
                    android:clickable="true"
                    android:text="@string/center_vertically"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:background="?android:selectableItemBackground" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bgTransRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bg_transparency"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:id="@+id/bgTransTextView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/bgTransValTextView"
                    android:paddingBottom="10dp"
                    android:paddingTop="18dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:ellipsize="end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bgTransValTextView"
                    android:layout_above="@+id/bgTransSeekBar"
                    android:paddingTop="18dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:paddingRight="14dp" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bgTransSeekBar"
                    android:max="100"
                    android:indeterminate="false"
                    android:progress="0"
                    android:layout_below="@+id/bgTransTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/textView"
                    android:layout_below="@+id/bgTransSeekBar"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifty"
                    android:id="@+id/textView2"
                    android:layout_below="@+id/bgTransSeekBar"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_hundred"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/bgTransSeekBar"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingRight="16dp"
                    android:paddingTop="5dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/okCancelRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/vertSeparatorView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"
            android:layout_alignParentTop="true"/>

        <View
            android:id="@+id/horizSeparatorView"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/dividerVertical"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/horizSeparatorView"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/cancel"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/ok"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/horizSeparatorView"/>

    </RelativeLayout>

</RelativeLayout>
